[gd_scene load_steps=7 format=3 uid="uid://bs1dgtnrfxbft"]

[ext_resource type="Script" path="res://menuLoss.gd" id="1_ak42u"]
[ext_resource type="Texture2D" uid="uid://0dy6rejtyj0r" path="res://assets/Background/background1.png" id="2_efmw6"]
[ext_resource type="AudioStream" uid="uid://bhitbc2v3f0dr" path="res://sounds/loss.wav" id="3_1ccer"]
[ext_resource type="Texture2D" uid="uid://n4imrql8vbvu" path="res://assets/Background/background2.png" id="3_eint2"]
[ext_resource type="Texture2D" uid="uid://cbb55dw0wa5hq" path="res://assets/Background/background3.png" id="4_8nwf5"]
[ext_resource type="Texture2D" uid="uid://d1m0ub1h78bgy" path="res://assets/Background/vignette.png" id="6_gm1qu"]

[node name="menuLoss" type="Node2D"]
process_mode = 3
position = Vector2(-288, -200)
script = ExtResource("1_ak42u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 249.0
offset_top = 165.0
offset_right = 327.0
offset_bottom = 427.0
scale = Vector2(14.36, 1)
color = Color(0.407843, 0.705882, 0.870588, 1)

[node name="Fondo2" type="Sprite2D" parent="."]
position = Vector2(810, 784)
scale = Vector2(1.67109, 1.26875)
texture = ExtResource("2_efmw6")

[node name="Background2" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(810, 771)
scale = Vector2(0.801762, 1)
texture = ExtResource("3_eint2")
region_enabled = true
region_rect = Rect2(0, 0, 1362.59, 640)

[node name="Background3" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(800, 777)
scale = Vector2(0.807343, 1)
texture = ExtResource("4_8nwf5")
region_enabled = true
region_rect = Rect2(0, 0, 1321.62, 640)

[node name="Vignette2" type="Sprite2D" parent="."]
position = Vector2(795, 577)
scale = Vector2(1.85263, 2.8963)
texture = ExtResource("6_gm1qu")

[node name="tiempo" type="Label" parent="."]
offset_left = 288.0
offset_top = 416.0
offset_right = 1311.0
offset_bottom = 485.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Tiempo tomado: 1"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 288.0
offset_top = 346.0
offset_right = 1310.0
offset_bottom = 415.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Game over"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 649.0
offset_top = 527.0
offset_right = 966.0
offset_bottom = 748.0

[node name="jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Reintentar"

[node name="menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Menu"

[node name="salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1ccer")
autoplay = true

[node name="Vignette" type="Sprite2D" parent="."]
position = Vector2(800, 585)
scale = Vector2(1.83158, 2.8963)
texture = ExtResource("6_gm1qu")

[connection signal="pressed" from="VBoxContainer/jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/salir" to="." method="_on_salir_pressed"]
